[package]
name = "tirocks-sys"
version = "0.1.0"
edition = "2021"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["rocksdb", "bindings"]
links = "tirocks"

[dependencies]
# native library >=1.0.8
bzip2-sys = { version = "0.1.11", features = ["static"] }
libc = "0.2.11"
libz-sys = { version = "1.1", features = ["static"] }
openssl-sys = { version = "0.9.54", optional = true, features = ["vendored"] }
# native library >= 1.4.8
zstd-sys = "1.4.19"
lz4-sys = "1.9"
snappy-sys = "0.1"

[features]
default = []
encryption = ["openssl-sys"]
jemalloc = ["tikv-jemalloc-sys"]
sse = []
static_libcpp = []

# portable doesn't require static link, though it's meaningless
# when not using with static-link right now in this crate.
portable = []
# If this feature is enabled, bindings will be regenerated.
update-bindings = ["bindgen"]

[build-dependencies]
cc = "1.0"
cmake = "0.1"
# Because of rust-lang/cargo#5237, bindgen should not be upgraded until a minor or major release.
bindgen = { version = "0.57.0", default-features = false, optional = true, features = ["runtime"] }

[dependencies.tikv-jemalloc-sys]
version = "0.4.0"
optional = true
features = ["unprefixed_malloc_on_supported_platforms"]
