[package]
name = "tirocks"
version = "0.1.0"
edition = "2021"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["rocksdb", "bindings"]

[features]
nightly = []
encryption = ["tirocks-sys/encryption"]
jemalloc = ["tirocks-sys/jemalloc"]
sse = ["tirocks-sys/sse"]
portable = ["tirocks-sys/portable"]

[dependencies]
libc = "0.2.11"
tirocks-sys = { path = "../tirocks-sys" }
paste = "1.0"

[dev-dependencies]
tempfile = "3.0"
rand = "0.8"
crc = "1.0"

[[test]]
name = "tests"
path = "tests/tests/mod.rs"
